terminando el primer practico

--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+
+    <h1>Agenda Virtual</h1>
+
+    <p>Se trataria de crear una agenda virtual donde el usuario pueda reservar su turno y dejarlo abonado. La misma seria adaptativa a cualquier servicio ya sea para psicologia, tatuador, masajes o lo que el cliente determine.</p>
+
+
+    <script src="./js/main.js"></script>
 </body>
 </html>
