agrege el mensaje final por dom

--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <p>Se trataria de crear una agenda virtual donde el usuario pueda reservar su turno y dejarlo abonado. La misma seria adaptativa a cualquier servicio ya sea para psicologia, tatuador, masajes o lo que el cliente determine.</p>
 
+    <div>
+        <h2></h2>
+    </div>
 
     <script src="./js/main.js"></script>
 </body>
