--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <p>Se trataria de crear una agenda virtual donde el usuario pueda reservar su turno y dejarlo abonado. La misma seria adaptativa a cualquier servicio ya sea para psicologia, tatuador, masajes o lo que el cliente determine.</p>
 
     <div>
-        <h2></h2>
+        <button class="boton">Agendar Turno</button>
     </div>
 
     <script src="./js/main.js"></script>
