--- a/index.html
+++ b/index.html
@@ -4,15 +4,74 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+
+    <link rel="stylesheet" href="css/main.css">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap" rel="stylesheet">
+
+    <title>Agenda Virtual</title>
 </head>
 <body>
+    <div class="text-center cabeza p-1">
+        <h1 class="text-white">Agenda Virtual</h1>
+        <p class="fs-5 text-white">Agenda tu turno online! Donde vos elegis el dia y el horario que mejor se adapte a vos!</p>
+    </div>
 
-    <h1>Agenda Virtual</h1>
+    <div class="text-center m-3">
+        <output class="fs-3">Nombre:</output>
+        <input id="nombre" name="nombre" class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Nombre">
+    </div>
+    <div class="text-center">
+        <p class="m-1 fs-4">Horarios de turnos mañana:</p>
+        <p class="fs-5">9:30 - 13:00</p>
+        <p class="m-1 fs-4">Horarios de turnos Siesta:</p>
+        <p class="fs-5">14:30 - 17:00</p>
+        <p class="m-1 fs-4">Horarios de los turnos Tarde:</p>
+        <p class="fs-5">18:00 - 21:00</p>
+    </div>
+    <div class="m-5">
+        <div class="d-flex">
+            <div class="text-center">
+                <p class="dias text-center fs-1">Lunes</p>
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Mañana">
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Siesta">
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Tarde">
+            </div>
+            <div class="text-center">
+                <p class="dias text-center fs-1">Martes</p>
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Mañana">
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Siesta">
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Tarde">
+            </div>
+            <div class="text-center">
+                <p class="dias text-center fs-1">Miercoles</p>
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Mañana">
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Siesta">
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Tarde">
+            </div>
+            <div class="text-center">
+                <p class="dias text-center fs-1">Jueves</p>
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Mañana">
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Siesta">
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Tarde">
+            </div>
+            <div class="text-center">
+                <p class="dias text-center fs-1">Viernes</p>
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Mañana">
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Siesta">
+                <input class="text-center border-0 m-1 rounded-3 p-1" type="text" placeholder="Tarde">
+            </div>
+        </div>
+        <div class="text-center m-4">
+            <button class="gt guardar-turno border-warning rounded-3 p-2">Guardar Turno</button>
+        </div>
+    </div>
 
-    <p>Se trataria de crear una agenda virtual donde el usuario pueda reservar su turno y dejarlo abonado. La misma seria adaptativa a cualquier servicio ya sea para psicologia, tatuador, masajes o lo que el cliente determine.</p>
-
-    <div>
+    <div class="text-center">
         <button class="boton">Agendar Turno</button>
     </div>
 
